# forge-cli

./: .gitignore  README.md  main.py  pyproject.toml
forge/: cli.py
forge/commands/: new.py
forge/core/: prompts.py  runner.py  templates.py
