[project]
name = "forge-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyfiglet>=1.0.4",
    "rich>=14.3.3",
    "typer>=0.24.1",
]
[project.scripts]
forge = "forge.cli:app"

[tool.uv.workspace]
members = [
    "new",
    "ne",
    "flaskgpt",
    "my_api",
    "weather_app",
    "tmp/my_api",
    "tmp/my_api/flask_gpt",
    "tmp/todo",
    "opp",
    "tmp/flask_bot",
    "tmp/apptodo",
    "tmp/flask_app",
    "tmp/app",
    "tmp/docker_api",
]
